[package]
name = "atomic-file"
version = "1.0.0"
edition = "2021"
description = "library for upgradeable ACID one-shot files"
license = "MIT"
repository = "https://github.com/DavidVorick/atomic-file"

[dependencies]
anyhow = "1.0"
async-std = {version = "1", features = ["attributes"]}
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
testdir = "0.7.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
